--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,11 @@
             "Fatrex\\LaravelKaleido\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "Fatrex\\LaravelKaleido\\Tests\\": "tests/"
+        }
+    },
     "extra": {
         "laravel": {
             "providers": [
@@ -25,5 +30,18 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^11.0|^12.0"
+    },
+    "require-dev": {
+        "pestphp/pest": "4.x-dev",
+        "orchestra/testbench": "10.x-dev",
+        "pestphp/pest-plugin-laravel": "4.x-dev"
+    },
+    "config": {
+        "allow-plugins": {
+            "pestphp/pest-plugin": true
+        }
+    },
+    "scripts": {
+        "test": "vendor/bin/pest"
     }
 }
